// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordWithmeter component renders with no props 1`] = `
<div
  compareTo={Array []}
  onChange={[Function]}
>
  <div
    className="right"
  >
    <label
      htmlFor="showPassword"
    >
      Show password
    </label>
    <input
      checked={false}
      onChange={[Function]}
      type="checkbox"
    />
  </div>
  <label
    htmlFor="password"
  >
    Password
  </label>
  <Alert
    className="my2"
  >
    A strong password is at least 9 characters, not a commonly-used word or phrase, and not too similar to the person’s name or email address.
  </Alert>
  <input
    className="input"
    id="password"
    name="password"
    onChange={[Function]}
    type="password"
    value=""
  />
  <div
    className="strength-meter hidden"
  >
    <div
      className="strength-meter-fill"
      data-strength={0}
    />
  </div>
  <div
    className="strength-meter-quality hidden"
  >
    Password is weak
  </div>
</div>
`;

exports[`PasswordWithmeter component renders with various passwords 1`] = `
<div
  compareTo={Array []}
  onChange={[Function]}
>
  <div
    className="right"
  >
    <label
      htmlFor="showPassword"
    >
      Show password
    </label>
    <input
      checked={false}
      onChange={[Function]}
      type="checkbox"
    />
  </div>
  <label
    htmlFor="password"
  >
    Password
  </label>
  <Alert
    className="my2"
  >
    A strong password is at least 9 characters, not a commonly-used word or phrase, and not too similar to the person’s name or email address.
  </Alert>
  <input
    className="input"
    id="password"
    name="password"
    onChange={[Function]}
    type="password"
    value="a"
  />
  <div
    className="strength-meter visible"
  >
    <div
      className="strength-meter-fill"
      data-strength={0}
    />
  </div>
  <div
    className="strength-meter-quality visible"
  >
    Password is weak
  </div>
</div>
`;

exports[`PasswordWithmeter component renders with various passwords 2`] = `
<div
  compareTo={Array []}
  onChange={[Function]}
>
  <div
    className="right"
  >
    <label
      htmlFor="showPassword"
    >
      Show password
    </label>
    <input
      checked={false}
      onChange={[Function]}
      type="checkbox"
    />
  </div>
  <label
    htmlFor="password"
  >
    Password
  </label>
  <Alert
    className="my2"
  >
    A strong password is at least 9 characters, not a commonly-used word or phrase, and not too similar to the person’s name or email address.
  </Alert>
  <input
    className="input"
    id="password"
    name="password"
    onChange={[Function]}
    type="password"
    value="abCD"
  />
  <div
    className="strength-meter visible"
  >
    <div
      className="strength-meter-fill"
      data-strength={1}
    />
  </div>
  <div
    className="strength-meter-quality visible"
  >
    Password is weak
  </div>
</div>
`;

exports[`PasswordWithmeter component renders with various passwords 3`] = `
<div
  compareTo={Array []}
  onChange={[Function]}
>
  <div
    className="right"
  >
    <label
      htmlFor="showPassword"
    >
      Show password
    </label>
    <input
      checked={false}
      onChange={[Function]}
      type="checkbox"
    />
  </div>
  <label
    htmlFor="password"
  >
    Password
  </label>
  <Alert
    className="my2"
  >
    A strong password is at least 9 characters, not a commonly-used word or phrase, and not too similar to the person’s name or email address.
  </Alert>
  <input
    className="input"
    id="password"
    name="password"
    onChange={[Function]}
    type="password"
    value="abCD321"
  />
  <div
    className="strength-meter visible"
  >
    <div
      className="strength-meter-fill"
      data-strength={2}
    />
  </div>
  <div
    className="strength-meter-quality visible"
  >
    Password is weak
  </div>
</div>
`;

exports[`PasswordWithmeter component renders with various passwords 4`] = `
<div
  compareTo={Array []}
  onChange={[Function]}
>
  <div
    className="right"
  >
    <label
      htmlFor="showPassword"
    >
      Show password
    </label>
    <input
      checked={false}
      onChange={[Function]}
      type="checkbox"
    />
  </div>
  <label
    htmlFor="password"
  >
    Password
  </label>
  <Alert
    className="my2"
  >
    A strong password is at least 9 characters, not a commonly-used word or phrase, and not too similar to the person’s name or email address.
  </Alert>
  <input
    className="input"
    id="password"
    name="password"
    onChange={[Function]}
    type="password"
    value="abCD321!,"
  />
  <div
    className="strength-meter visible"
  >
    <div
      className="strength-meter-fill"
      data-strength={3}
    />
  </div>
  <div
    className="strength-meter-quality visible"
  >
    Password is good
  </div>
</div>
`;

exports[`PasswordWithmeter component renders with various passwords 5`] = `
<div
  compareTo={Array []}
  onChange={[Function]}
>
  <div
    className="right"
  >
    <label
      htmlFor="showPassword"
    >
      Show password
    </label>
    <input
      checked={false}
      onChange={[Function]}
      type="checkbox"
    />
  </div>
  <label
    htmlFor="password"
  >
    Password
  </label>
  <Alert
    className="my2"
  >
    A strong password is at least 9 characters, not a commonly-used word or phrase, and not too similar to the person’s name or email address.
  </Alert>
  <input
    className="input"
    id="password"
    name="password"
    onChange={[Function]}
    type="password"
    value="abCD321!,@_"
  />
  <div
    className="strength-meter visible"
  >
    <div
      className="strength-meter-fill"
      data-strength={4}
    />
  </div>
  <div
    className="strength-meter-quality visible"
  >
    Password is great
  </div>
</div>
`;
